--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,56 +1,143 @@
-﻿<Window x:Class="AutoClicker.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AutoClicker"
-        mc:Ignorable="d"
-        Title="AutoClicker" Height="450" Width="300">
+﻿<Window
+  x:Class="AutoClicker.MainWindow"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:local="clr-namespace:AutoClicker"
+  mc:Ignorable="d"
+  Title="AutoClicker"
+  Height="395"
+  Width="300"
+  ResizeMode="NoResize"
+>
   <StackPanel>
-    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="0,0,0,5">
-      <RadioButton
-        Content="Click"
-        Margin="5,0,0,0"
-        Width="70"
-        VerticalAlignment="Center"
-        IsChecked="{Binding IsClickCountSelected}"
-        Tag="Click"
-      />
-      <TextBox
-        x:Name="clicksTextBoxName"
-        Width="50"
-        Padding="5"
-        Text="{Binding ClicksInput, UpdateSourceTrigger=PropertyChanged}"
-        PreviewTextInput="NumberOnly_PreviewTextInput"
-        VerticalAlignment="Center"
-      />
-      <Label Content="times" />
+    <StackPanel Margin="0,10,0,10" Orientation="Horizontal" HorizontalAlignment="Center">
+      <Button Width="120" Padding="10,5,10,5" Margin="0,0,10,0" Content="Start" />
+      <Button Width="120" Padding="10,5,10,5" Content="Stop" />
     </StackPanel>
-    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-      <RadioButton
-        Content="Click for"
-        Margin="5,0,0,0"
-        Width="70"
-        VerticalAlignment="Center"
-        IsChecked="{Binding IsClickForCountSelected}"
-        Tag="ClickFor"
-      />
-      <TextBox
-        x:Name="clicksForTextBoxName"
-        Width="50"
-        Padding="5"
-        Text="{Binding ClickForInput, UpdateSourceTrigger=PropertyChanged}"
-        PreviewTextInput="NumberOnly_PreviewTextInput"
-        VerticalAlignment="Center"
-      />
-      <Label Content="times" />
-    </StackPanel>
-    <TextBlock
-      Text="{Binding Hotkey}"
-      FontSize="16"
-      Margin="10"
-      Foreground="Blue"
-      VerticalAlignment="Center"
-    />
+    <GroupBox Header="Click Count" Margin="10,0,10,5">
+      <StackPanel DataContext="{Binding ClickCountModel}">
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="0,0,0,5">
+          <RadioButton
+            Content="Click"
+            Width="70"
+            VerticalAlignment="Center"
+            IsChecked="{Binding IsClickCountSelected}"
+            Tag="Click"
+          />
+          <TextBox
+            x:Name="clicksTextBoxName"
+            Width="50"
+            Padding="5"
+            Text="{Binding ClicksInput, UpdateSourceTrigger=PropertyChanged}"
+            PreviewTextInput="NumberOnly_PreviewTextInput"
+            IsEnabled="{Binding IsClickCountSelected}"
+            VerticalAlignment="Center"
+          />
+          <Label Content="times" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+          <RadioButton
+            Content="Click for"
+            Width="70"
+            VerticalAlignment="Center"
+            IsChecked="{Binding IsClickForCountSelected}"
+            Tag="ClickFor"
+          />
+          <TextBox
+            x:Name="clicksForTextBoxName"
+            Width="50"
+            Padding="5"
+            Text="{Binding ClickForInput, UpdateSourceTrigger=PropertyChanged}"
+            PreviewTextInput="NumberOnly_PreviewTextInput"
+            IsEnabled="{Binding IsClickForCountSelected}"
+            VerticalAlignment="Center"
+          />
+          <ComboBox
+            SelectedItem="{Binding SelectedClickCount}"
+            Margin="5,0,0,0"
+            Width="80"
+            SelectedValuePath="Content"
+            x:Name="selectedClickCountName"
+            IsEnabled="{Binding IsClickForCountSelected}"
+            Padding="5"
+          >
+            <ComboBox.Items>
+              <ComboBoxItem Content="ms" />
+              <ComboBoxItem Content="seconds" />
+              <ComboBoxItem Content="minutes" />
+              <ComboBoxItem Content="hours" />
+            </ComboBox.Items>
+          </ComboBox>
+        </StackPanel>
+      </StackPanel>
+    </GroupBox>
+    <GroupBox Header="Click Options" Margin="10,0,10,5">
+      <StackPanel>
+        <StackPanel Margin="0,0,0,5" Orientation="Horizontal" VerticalAlignment="Center">
+          <Label Content="Interval" Width="70" />
+          <TextBox
+            Width="85"
+            Padding="5"
+            Text="50"
+            PreviewTextInput="NumberOnly_PreviewTextInput"
+            VerticalAlignment="Center"
+          />
+          <Label Content="ms" />
+        </StackPanel>
+        <StackPanel Margin="0,0,0,5" Orientation="Horizontal" VerticalAlignment="Center">
+          <Label Content="Button" Width="70" />
+          <ComboBox
+            SelectedValuePath="Content"
+            Padding="5"
+            Width="110"
+          >
+            <ComboBox.Items>
+              <ComboBoxItem Content="Left Button" />
+              <ComboBoxItem Content="Middle Button" />
+              <ComboBoxItem Content="Right Button" />
+            </ComboBox.Items>
+          </ComboBox>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+          <Label Content="Action" Width="70" />
+          <ComboBox
+            SelectedValuePath="Content"
+            Padding="5"
+            Width="110"
+          >
+            <ComboBox.Items>
+              <ComboBoxItem Content="Single Click" />
+              <ComboBoxItem Content="Double Click" />
+              <ComboBoxItem Content="Button Down" />
+              <ComboBoxItem Content="Button Up" />
+            </ComboBox.Items>
+          </ComboBox>
+        </StackPanel>
+      </StackPanel>
+    </GroupBox>
+    <GroupBox Header="Hotkeys" Margin="10,0,10,0">
+      <StackPanel DataContext="{Binding HotkeysModel}" Margin="5">
+        <StackPanel Margin="0,0,0,5" Orientation="Horizontal" VerticalAlignment="Center">
+          <Button
+            Padding="10,5,10,5"
+            Content="Bind Start"
+            Click="BindStartAction_Click"
+            IsEnabled="{Binding BindStartButtonEnabled}"
+          />
+          <Label Content="{Binding StartActionKey}" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+          <Button
+            Padding="10,5,10,5"
+            Content="Bind Stop"
+            Click="BindStopAction_Click"
+            IsEnabled="{Binding BindStopButtonEnabled}"
+          />
+          <Label Content="{Binding StopActionKey}" />
+        </StackPanel>
+      </StackPanel>
+    </GroupBox>
   </StackPanel>
 </Window>
