--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,15 +7,30 @@
   xmlns:local="clr-namespace:AutoClicker"
   mc:Ignorable="d"
   Title="AutoClicker"
-  Height="395"
+  Height="430"
   Width="300"
   ResizeMode="NoResize"
 >
   <StackPanel>
-    <StackPanel Margin="0,10,0,10" Orientation="Horizontal" HorizontalAlignment="Center">
-      <Button Width="120" Padding="10,5,10,5" Margin="0,0,10,0" Content="Start" />
-      <Button Width="120" Padding="10,5,10,5" Content="Stop" />
-    </StackPanel>
+    <GroupBox Header="Run" Margin="10,0,10,5">
+      <StackPanel DataContext="{Binding RunModel}">
+        <StackPanel Margin="0,10,0,10" Orientation="Horizontal" HorizontalAlignment="Center">
+          <Button
+            Width="120"
+            Padding="10,5,10,5"
+            Margin="0,0,10,0"
+            Content="Start"
+            IsEnabled="{Binding IsStartButtonEnabled}"
+          />
+          <Button
+            Width="120"
+            Padding="10,5,10,5"
+            Content="Stop"
+            IsEnabled="{Binding IsStopButtonEnabled}"
+          />
+        </StackPanel>
+      </StackPanel>
+    </GroupBox>
     <GroupBox Header="Click Count" Margin="10,0,10,5">
       <StackPanel DataContext="{Binding ClickCountModel}">
         <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="0,0,0,5">
