--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,12 +21,14 @@
             Margin="0,0,10,0"
             Content="Start"
             IsEnabled="{Binding IsStartButtonEnabled}"
+            Click="Start_Click"
           />
           <Button
             Width="120"
             Padding="10,5,10,5"
             Content="Stop"
             IsEnabled="{Binding IsStopButtonEnabled}"
+            Click="Stop_Click"
           />
         </StackPanel>
       </StackPanel>
